monthly totals and max out at 20000

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <h2>Add Employee</h2>
         <input type="text" id="first-name-input" placeholder="First Name">
         <input type="text" id="last-name-input" placeholder="Last Name">
-        <input type="text" id="id-input" placeholder="ID">
+        <input type="number" id="id-input" placeholder="ID">
         <input type="text" id="title-input" placeholder="Title">
-        <input type="text" id="salary-input" placeholder="Annual Salary"><br/>
+        <input type="number" id="salary-input" placeholder="Annual Salary"><br/>
         <button id="submitBtn">Submit</button>
     </div>
     <div class="employee-table-container">
@@ -38,6 +38,7 @@
             <tbody id="employee-list">
             </tbody>
         </table>
+        <h3 id="total-monthly"></h3>
     </div>
     
 </body>
